[package]
name = "yoot-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version ="0.5.0-rc.2", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.3.1"
tokio = { version= "1.23.1", features=["full"]}
jsonwebtoken = "8.2.0"
bcrypt = "0.13.0"